@@ -11,17 +11,25 @@
 
 	<groupId>io.github.vzwingma.finances.budget</groupId>
 	<artifactId>services</artifactId>
-	<version>8.0.0-SNAPSHOT</version>
+	<version>11.0.0-SNAPSHOT</version>
 	<name>[Budget] Services</name>
 	<description>Services de l'application</description>
 	<packaging>pom</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<communs.version>9.1.2-SNAPSHOT</communs.version>
+		<maven.compiler.target>11</maven.compiler.target>
+		<communs.version>11.0.0-SNAPSHOT</communs.version>
+		<spring.version>5.2.2.RELEASE</spring.version>
+		<mongo.data.version>3.9.0</mongo.data.version>
+		<spring.security.version>5.2.2.RELEASE</spring.security.version>
+		<jackson.version>2.10.1</jackson.version>
+		<jersey.version>2.29.1</jersey.version>
+		<maven.build.timestamp.format>dd/MM/yyyy HH:mm</maven.build.timestamp.format>
+		<timestamp>${maven.build.timestamp}</timestamp>
 		<maven.javadoc.skip>true</maven.javadoc.skip>
+		
+		<sonar.projectKey>gestion-budget-services</sonar.projectKey>
 	</properties>
 
 	<issueManagement>
@@ -57,8 +65,14 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>${maven.compiler.source}</source>
-					<target>${maven.compiler.target}</target>
+					<release>${maven.compiler.target}</release>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<configuration>
+					<generateBackupPoms>false</generateBackupPoms>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -102,6 +116,24 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<configuration>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
+				</configuration>
+			</plugin>
+
+			<plugin>
 				<artifactId>maven-deploy-plugin</artifactId>
 				<configuration>
 					<skip>true</skip>
@@ -145,12 +177,12 @@
 			<dependency>
 				<groupId>io.github.vzwingma.finances.budget.services</groupId>
 				<artifactId>communs</artifactId>
-				<version>8.3.0</version>
+				<version>11.0.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>io.github.vzwingma.finances.budget.services</groupId>
 				<artifactId>communs</artifactId>
-				<version>8.3.0</version>
+				<version>11.0.0-SNAPSHOT</version>
 				<type>test-jar</type>
 				<scope>test</scope>
 			</dependency>
